--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <ul class="todo-list"></ul>
     </div>
 
+    <footer>
+        <h1>Developed by:&nbsp;<span><a href = "mailto: tanvirahmed.cse.bubt@gmail.com ">Tanvir Ahmed</a></span></h1>
+    </footer>
+
     <script src="./app.js"></script>
 </body>
 </html>
